@@ -32,53 +32,63 @@ public class PermissionController {
     @GetMapping("/user/{userId}")
     @Operation(summary = "Get user permissions")
     public ResponseEntity<List<Permission>> getUserPermissions(@PathVariable String userId) {
-        var user = userService.getUserById(Long.parseLong(userId));
-        if (user.getRole() == UserRole.SUPER_ADMIN) {
-            return ResponseEntity.ok(Arrays.asList(Permission.values()));
+        try {
+            var user = userService.getUserById(Long.parseLong(userId));
+            if (user.getRole() == UserRole.SUPER_ADMIN) {
+                return ResponseEntity.ok(Arrays.asList(Permission.values()));
+            }
+            // TODO: Implement actual permission retrieval from database
+            return ResponseEntity.ok(List.of(
+                Permission.USER_READ,
+                Permission.USER_CREATE,
+                Permission.USER_UPDATE,
+                Permission.USER_DELETE,
+                Permission.ROLE_READ,
+                Permission.ROLE_CREATE,
+                Permission.ROLE_UPDATE,
+                Permission.ROLE_DELETE,
+                Permission.STORE_READ,
+                Permission.STORE_CREATE,
+                Permission.STORE_UPDATE,
+                Permission.STORE_DELETE,
+                Permission.PRODUCT_READ,
+                Permission.PRODUCT_CREATE,
+                Permission.PRODUCT_UPDATE,
+                Permission.PRODUCT_DELETE,
+                Permission.ORDER_READ,
+                Permission.ORDER_CREATE,
+                Permission.ORDER_UPDATE,
+                Permission.ORDER_DELETE,
+                Permission.ANALYTICS_READ,
+                Permission.ANALYTICS_EXPORT,
+                Permission.DISCOUNT_READ,
+                Permission.DISCOUNT_CREATE,
+                Permission.DISCOUNT_UPDATE,
+                Permission.DISCOUNT_DELETE,
+                Permission.REVIEW_READ,
+                Permission.REVIEW_CREATE,
+                Permission.REVIEW_UPDATE,
+                Permission.REVIEW_DELETE,
+                Permission.CATEGORY_READ,
+                Permission.CATEGORY_CREATE,
+                Permission.CATEGORY_UPDATE,
+                Permission.CATEGORY_DELETE,
+                Permission.SETTINGS_READ,
+                Permission.SETTINGS_UPDATE,
+                Permission.NOTIFICATION_READ,
+                Permission.NOTIFICATION_CREATE,
+                Permission.NOTIFICATION_UPDATE,
+                Permission.NOTIFICATION_DELETE
+            ));
+        } catch (Exception e) {
+            // Если пользователь не найден или другая ошибка, возвращаем базовые разрешения
+            return ResponseEntity.ok(List.of(
+                Permission.USER_READ,
+                Permission.PRODUCT_READ,
+                Permission.STORE_READ,
+                Permission.ORDER_READ
+            ));
         }
-        // TODO: Implement actual permission retrieval from database
-        return ResponseEntity.ok(List.of(
-            Permission.USER_READ,
-            Permission.USER_CREATE,
-            Permission.USER_UPDATE,
-            Permission.USER_DELETE,
-            Permission.ROLE_READ,
-            Permission.ROLE_CREATE,
-            Permission.ROLE_UPDATE,
-            Permission.ROLE_DELETE,
-            Permission.STORE_READ,
-            Permission.STORE_CREATE,
-            Permission.STORE_UPDATE,
-            Permission.STORE_DELETE,
-            Permission.PRODUCT_READ,
-            Permission.PRODUCT_CREATE,
-            Permission.PRODUCT_UPDATE,
-            Permission.PRODUCT_DELETE,
-            Permission.ORDER_READ,
-            Permission.ORDER_CREATE,
-            Permission.ORDER_UPDATE,
-            Permission.ORDER_DELETE,
-            Permission.ANALYTICS_READ,
-            Permission.ANALYTICS_EXPORT,
-            Permission.DISCOUNT_READ,
-            Permission.DISCOUNT_CREATE,
-            Permission.DISCOUNT_UPDATE,
-            Permission.DISCOUNT_DELETE,
-            Permission.REVIEW_READ,
-            Permission.REVIEW_CREATE,
-            Permission.REVIEW_UPDATE,
-            Permission.REVIEW_DELETE,
-            Permission.CATEGORY_READ,
-            Permission.CATEGORY_CREATE,
-            Permission.CATEGORY_UPDATE,
-            Permission.CATEGORY_DELETE,
-            Permission.SETTINGS_READ,
-            Permission.SETTINGS_UPDATE,
-            Permission.NOTIFICATION_READ,
-            Permission.NOTIFICATION_CREATE,
-            Permission.NOTIFICATION_UPDATE,
-            Permission.NOTIFICATION_DELETE
-        ));
     }
 
     @PostMapping("/roles/{roleName}/permissions")
